# airbnb-clone-backend

./: pyproject.toml
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py  0003_alter_category_kind.py
common/: models.py
config/: authentication.py  settings.py  urls.py
direct_messages/: admin.py  apps.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_remove_perk_detail_perk_details_and_more.py  0003_experience_category.py  0004_alter_experience_category_alter_experience_host_and_more.py
medias/: models.py  serializers.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py  0003_alter_photo_file_alter_video_file.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_room_name_alter_amenity_description_and_more.py  0004_room_category.py  (+2 more)
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
(+7 files in other folders)
